src/objects/IntermediateTable__c.object
<CustomObject>
    <fields>
        <fullName>ConventionalClosingStage__c</fullName>
        <label>常规成交阶段总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConventionalWinRate__c</fullName>
        <formula>ConventionalClosingStage__c  /  RuleAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>常规赢单率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>唯一值</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LargEuropeanAuctionStage__c</fullName>
        <label>大型欧堡成交阶段金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LargeAnnualPerformanc__c</fullName>
        <label>大型订单完成实际</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LargeAnnualTarget__c</fullName>
        <label>大型事业群订单指标</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LargeGapAmount__c</fullName>
        <formula>(LargeAnnualTarget__c-LargeAnnualPerformanc__c)*2</formula>
        <label>大型销售机会缺口金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LargeOBAmount__c</fullName>
        <label>大型欧堡预计成交总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LargeOBWinRate__c</fullName>
        <formula>LargEuropeanAuctionStage__c /  LargeOBAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>大型欧堡赢单率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LargeOpportunityAmount2__c</fullName>
        <label>大型销售机会总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LargeQGAmount__c</fullName>
        <label>大型屈光预计成交总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LargeQGWinRate__c</fullName>
        <formula>LargeRefractivePhase__c  /  LargeQGAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>大型屈光赢单率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LargeRefractivePhase__c</fullName>
        <label>大型屈光成交阶段金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LargeSufficiency__c</fullName>
        <formula>LargeOpportunityAmount2__c/LargeGapAmount__c</formula>
        <label>大型销售机会充足率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LargeTargetTask__c</fullName>
        <formula>LargeAnnualTarget__c-LargeAnnualPerformanc__c</formula>
        <label>大型销售任务</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>月份（用于统计）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderCompletionRate__c</fullName>
        <formula>LargeAnnualPerformanc__c/LargeAnnualTarget__c</formula>
        <label>大型订单完成率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OverallAnnualPerforman__c</fullName>
        <label>设备类合计订单完成实际</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverallAnnualTarget__c</fullName>
        <label>设备类合计订单指标</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverallGapAmount__c</fullName>
        <formula>(OverallTargetTask__c*4)-TotalOpportunityAmount__c</formula>
        <label>整体缺口金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverallGoalCompletionRate__c</fullName>
        <formula>OverallAnnualPerforman__c/OverallAnnualTarget__c</formula>
        <label>整体目标完成率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OverallSufficiency__c</fullName>
        <formula>(TotalOpportunityAmount__c/4)/OverallTargetTask__c</formula>
        <label>整体销售机会充足率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OverallTargetTask__c</fullName>
        <formula>OverallAnnualTarget__c-OverallAnnualPerforman__c</formula>
        <label>整体年销售任务</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegularOrderCompletionRate__c</fullName>
        <formula>RuleAnnualPerformanc__c/RuleAnnualTarget__c</formula>
        <label>常规订单完成率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RuleAmount__c</fullName>
        <label>常规预计成交总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RuleAnnualPerformanc__c</fullName>
        <label>常规订单完成实际</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RuleAnnualTarget__c</fullName>
        <label>常规事业群订单指标</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RuleGapAmount1__c</fullName>
        <formula>(RuleOpportunityAmount__c/4)/RuleTargetTask__c</formula>
        <label>常规销售机会充足率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RuleGapAmount__c</fullName>
        <formula>(RuleTargetTask__c*4)-RuleOpportunityAmount__c</formula>
        <label>常规缺口总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RuleOpportunityAmount__c</fullName>
        <label>常规销售机会总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RuleTargetTask__c</fullName>
        <formula>RuleAnnualTarget__c-RuleAnnualPerformanc__c</formula>
        <label>常规年销售任务</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalOpportunityAmount__c</fullName>
        <label>整体销售机会总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>年份</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cjrq__c</fullName>
        <label>月份</label>
        <type>Date</type>
    </fields>
    <label>中间表对象</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <label>中间表对象名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>中间表对象</pluralLabel>
    <recordTypes>
        <fullName>RecordType221</fullName>
        <active>true</active>
        <label>带有缺口金额</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>